--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "odoc_editor_v2",
-  "version": "0.0.8",
+  "version": "0.2.02",
   "main": "dist/cjs/components/pages/editor.js",
   "module": "dist/esm/main.js",
-  "types": "dist/main.d.ts",
+  "types": "dist/esm/components/pages/editor.d.ts",
   "files": [
     "dist",
     "README.md"
@@ -145,7 +145,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.3",
     "vite": "^5.1.0",
     "webpack-cli": "^5.1.4"
   },
