--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odoc_editor_v2",
-  "version": "0.2.02",
+  "version": "0.2.12",
   "main": "dist/cjs/components/pages/editor.js",
   "module": "dist/esm/main.js",
   "types": "dist/esm/components/pages/editor.d.ts",
@@ -9,11 +9,12 @@
     "README.md"
   ],
   "scripts": {
-    "start": "vite --port 8000",
     "clean": "rm -rf dist",
     "build": "yarn run clean && rollup -c --bundleConfigAsCjs",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-storybook": "storybook build",
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
     "@ariakit/react": "^0.4.7",
@@ -27,6 +28,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@rollup/plugin-alias": "^5.1.0",
+    "@storybook/core-common": "^8.2.5",
     "@udecode/cn": "^29.0.1",
     "@udecode/plate-alignment": "^36.0.0",
     "@udecode/plate-autoformat": "^36.0.0",
@@ -107,6 +110,7 @@
     "slate-hyperscript": "^0.100.0",
     "slate-react": "^0.107.0",
     "sonner": "^1.5.0",
+    "storybook-builder-vite": "^0.1.23",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-morph": "^23.0.0",
@@ -120,10 +124,21 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@chromatic-com/storybook": "^1.6.1",
     "@rollup/plugin-commonjs": "^25.0.1",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.1",
+    "@storybook/addon-essentials": "^8.2.5",
+    "@storybook/addon-interactions": "^8.2.5",
+    "@storybook/addon-links": "^8.2.5",
+    "@storybook/addon-onboarding": "^8.2.5",
+    "@storybook/blocks": "^8.2.5",
+    "@storybook/builder-vite": "^8.3.0-alpha.2",
+    "@storybook/nextjs": "^8.2.5",
+    "@storybook/react": "^8.3.0-alpha.2",
+    "@storybook/test": "^8.2.5",
+    "@storybook/testing-library": "^0.2.2",
     "@types/esm": "^3",
     "@types/lodash": "^4",
     "@types/node": "^20.11.25",
@@ -137,6 +152,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-storybook": "^0.8.0",
     "esm": "^3.2.25",
     "postcss": "^8.4.39",
     "react": "^18.2.0",
@@ -144,6 +160,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "storybook": "^8.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "vite": "^5.1.0",
