--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odoc_editor_v2",
-  "version": "0.2.12",
+  "version": "0.2.37",
   "main": "dist/cjs/components/pages/editor.js",
   "module": "dist/esm/main.js",
   "types": "dist/esm/components/pages/editor.d.ts",
@@ -103,6 +103,7 @@
     "react-dom": "^18.3.1",
     "react-lite-youtube-embed": "^2.4.0",
     "react-tweet": "^3.2.0",
+    "readable-stream": "^4.5.2",
     "remark": "^15.0.1",
     "shiki": "^1.10.3",
     "slate": "^0.103.0",
@@ -155,8 +156,6 @@
     "eslint-plugin-storybook": "^0.8.0",
     "esm": "^3.2.25",
     "postcss": "^8.4.39",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
