--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "module": "esnext",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "downlevelIteration": true,
     "outDir": "dist",
     "target": "es2020",
